<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_panel"
        android:icon="@drawable/baseline_tv_24"
        android:title="@string/title_panel" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_report"
        android:icon="@drawable/baseline_show_chart_24"
        android:title="@string/title_report" />

    <item
        android:id="@+id/navigation_forum"
        android:icon="@drawable/baseline_forum_24"
        android:title="@string/title_forum" />
</menu>